--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
         w.beusablerumclient.load(a + "?url=" + encodeURIComponent(d.URL));
       })(window, document, "//rum.beusable.net/load/b240207e103601u296");
     </script>
+
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "setc6xlzvm");
+    </script>
   </head>
 
   <body class="h-full">
